--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,11 @@
-@import "variables/global";
-@import "themes/default";
+@import "vars";
+@import "fonts";
+@import "libs";
 @import "reset";
+@import "global";
+@import "media";
+@import "themes/default";
+@import "variables/global";
 
 body {
   font: var(--font-m);
@@ -10,12 +15,4 @@ body {
 .app {
   background-color: var(--bg-color);
   min-height: 100vh;
-}
-
-.content-page {
-  display: flex;
-}
-
-.logo_svg__logo-text {
-  fill: var(--inverted-primary-color);
 }
