add error handling, add skeletons loading indicator, add load more btn

--- a/src/app/styles/themes/default.scss
+++ b/src/app/styles/themes/default.scss
@@ -16,7 +16,7 @@
   --listbox-active: #cc2323;
 
   // card
-  --card-bg: #f4f4f4;
+  --card-bg: #fcfcfc;
 
   // inputs
   --input-bg: rgb(247 248 248 / 80%);
