--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -67,3 +67,15 @@
     font: var(--font-l);
   }
 }
+
+.weight_regular {
+  font-weight: 400;
+}
+
+.weight_semibold {
+  font-weight: 600;
+}
+
+.weight_bold {
+  font-weight: 700;
+}
