--- a/src/entities/Book/ui/BookCard/BookCard.module.scss
+++ b/src/entities/Book/ui/BookCard/BookCard.module.scss
@@ -1,3 +1,16 @@
-.BookCard {
+.image {
+  box-shadow: 0 4px 4px 0 rgb(0 0 0 / 25%);
+  width: 128px;
+  height: 192px;
+  object-fit: contain;
+  margin: 0 auto;
+}
 
+.link {
+  display: flex;
+  flex-direction: column;
+
+  &:hover {
+    transform: scale(1.03);
+  }
 }
