fix query params, add media query for skeletons, add media query hook

--- a/src/pages/BooksPage/ui/FindBookForm/FindBookForm.module.scss
+++ b/src/pages/BooksPage/ui/FindBookForm/FindBookForm.module.scss
@@ -6,3 +6,11 @@
 .title {
   text-align: center;
 }
+
+.listboxes {
+  flex-wrap: wrap;
+
+  @media screen and (max-width: 580px) {
+    justify-content: center;
+  }
+}
