--- a/src/pages/BooksPage/ui/BooksList/BooksList.module.scss
+++ b/src/pages/BooksPage/ui/BooksList/BooksList.module.scss
@@ -3,6 +3,22 @@
   grid-template-columns: repeat(5, 1fr);
   gap: 10px;
   row-gap: 15px;
+
+  @media screen and (max-width: 1366px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media screen and (max-width: 820px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media screen and (max-width: 640px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (max-width: 480px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .amount {
